--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ confection
 cymem
 decorator
 diffusers
-en_core_web_sm
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
 filelock
 Flask
 Flask-Cors
@@ -50,10 +50,8 @@ opt_einsum
 optree
 packaging
 pillow
-pip
 preshed
 proglog
-protobuf
 pydantic
 pydantic_core
 Pygments
@@ -64,7 +62,6 @@ rich
 safetensors
 setuptools
 shellingham
-six
 smart-open
 spacy
 spacy-legacy
