--- a/requirements.txt
+++ b/requirements.txt
@@ -1,91 +1,91 @@
-absl-py==2.1.0
-annotated-types==0.7.0
-astunparse==1.6.3
-blinker==1.8.2
-blis==2.0.2
-catalogue==2.0.10
-certifi==2024.8.30
-charset-normalizer==3.3.2
-click==8.1.7
-cloudpathlib==0.19.0
-confection==0.1.5
-cymem==2.0.8
-decorator==4.4.2
-diffusers==0.30.3
+absl-py
+annotated-types
+astunparse
+blinker
+blis
+catalogue
+certifi
+charset-normalizer
+click
+cloudpathlib
+confection
+cymem
+decorator
+diffusers
 en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
-filelock==3.16.1
-Flask==3.0.3
-Flask-Cors==5.0.0
-flatbuffers==24.3.25
-fsspec==2024.9.0
-gast==0.6.0
-google-pasta==0.2.0
-grpcio==1.66.2
-gTTS==2.5.3
-h5py==3.12.1
-huggingface-hub==0.25.1
-idna==3.10
-imageio==2.35.1
-imageio-ffmpeg==0.5.1
-importlib_metadata==8.5.0
-itsdangerous==2.2.0
-Jinja2==3.1.4
-keras==3.6.0
-langcodes==3.4.1
-language_data==1.2.0
-libclang==18.1.1
-marisa-trie==1.2.0
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdurl==0.1.2
-ml-dtypes==0.4.1
-moviepy==1.0.3
-mpmath==1.3.0
-murmurhash==1.0.10
-namex==0.0.8
-networkx==3.3
-numpy==2.0.2
-opt_einsum==3.4.0
-optree==0.13.0
-packaging==24.1
-pillow==10.4.0
-preshed==3.0.9
-proglog==0.1.10
-protobuf==5.28.2
-pydantic==2.9.2
-pydantic_core==2.23.4
-Pygments==2.18.0
-PyYAML==6.0.2
-regex==2024.9.11
-requests==2.32.3
-rich==13.9.2
-safetensors==0.4.5
-setuptools==75.1.0
-shellingham==1.5.4
-six==1.16.0
-smart-open==7.0.5
-spacy==3.8.2
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-srsly==2.4.8
-sympy==1.13.3
-tensorboard==2.17.1
-tensorboard-data-server==0.7.2
-termcolor==2.4.0
-thinc==8.3.2
-tokenizers==0.20.0
-torch==2.4.1
-torchaudio==2.4.1
-torchvision==0.19.1
-tqdm==4.66.5
-transformers==4.45.1
-typer==0.12.5
-typing_extensions==4.12.2
-urllib3==2.2.3
-wasabi==1.1.3
-weasel==0.4.1
-Werkzeug==3.0.4
-wheel==0.44.0
-wrapt==1.16.0
-zipp==3.20.2
+filelock
+Flask
+Flask-Cors
+flatbuffers
+fsspec
+gast
+google-pasta
+grpcio
+gTTS
+h5py
+huggingface-hub
+idna
+imageio
+imageio-ffmpeg
+importlib_metadata
+itsdangerous
+Jinja2
+keras
+langcodes
+language_data
+libclang
+marisa-trie
+Markdown
+markdown-it-py
+MarkupSafe
+mdurl
+ml-dtypes
+moviepy
+mpmath
+murmurhash
+namex
+networkx
+numpy
+opt_einsum
+optree
+packaging
+pillow
+preshed
+proglog
+protobuf
+pydantic
+pydantic_core
+Pygments
+PyYAML
+regex
+requests
+rich
+safetensors
+setuptools
+shellingham
+six
+smart-open
+spacy
+spacy-legacy
+spacy-loggers
+srsly
+sympy
+tensorboard
+tensorboard-data-server
+termcolor
+thinc
+tokenizers
+torch
+torchaudio
+torchvision
+tqdm
+transformers
+typer
+typing_extensions
+urllib3
+wasabi
+weasel
+Werkzeug
+wheel
+wrapt
+zipp
