--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ absl-py==2.1.0
 annotated-types==0.7.0
 astunparse==1.6.3
 blinker==1.8.2
+blis==1.0.1
 catalogue==2.0.10
 certifi==2024.8.30
 charset-normalizer==3.3.2
@@ -44,7 +45,7 @@ mpmath==1.3.0
 murmurhash==1.0.10
 namex==0.0.8
 networkx==3.3
-numpy==1.24.3
+numpy==2.0.2
 opt_einsum==3.4.0
 optree==0.13.0
 packaging==24.1
