--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,375 @@
+absl-py==2.1.0
+aiohappyeyeballs==2.4.3
 aiohttp==3.10.10
+aiosignal==1.3.1
+alembic==1.13.3
+amqp==5.2.0
+aniso8601==9.0.1
+annotated-types==0.7.0
+anyio==4.6.2
+appnope==0.1.4
+asttokens==2.4.1
+astunparse==1.6.3
+attrs==23.2.0
+backcall==0.2.0
+beautifulsoup4==4.12.3
+billiard==4.2.1
+bleach==6.1.0
+blinker==1.8.2
+blis==1.0.1
+boto3==1.35.39
+botocore==1.35.39
+cachetools==5.5.0
+catalogue==2.0.10
+celery==5.4.0
+certifi==2024.8.30
+charset-normalizer==3.3.2
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+cloudpathlib==0.19.0
+cloudpickle==2.2.1
+cohere==5.11.0
+confection==0.1.5
+contourpy==1.3.0
+cycler==0.12.1
+cymem==2.0.8
+databricks-sdk==0.34.0
+decorator==4.4.2
+defusedxml==0.7.1
+Deprecated==1.2.14
+diffusers==0.30.3
+dill==0.3.9
+docker==7.1.0
+docopt==0.6.2
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
+executing==2.1.0
+fastavro==1.9.7
+fastjsonschema==2.20.0
+filelock==3.16.1
 Flask==3.0.3
+Flask-Cors==5.0.0
+flatbuffers==24.3.25
+fonttools==4.54.1
+frozenlist==1.4.1
+fsspec==2024.9.0
+gast==0.6.0
+gitdb==4.0.11
+GitPython==3.1.43
+google-auth==2.35.0
+google-pasta==0.2.0
+graphene==3.3
+graphql-core==3.2.5
+graphql-relay==3.2.0
+grpcio==1.66.2
 gTTS==2.5.3
+gunicorn==23.0.0
+h11==0.14.0
+h5py==3.12.1
+httpcore==1.0.6
+httpx==0.27.2
+httpx-sse==0.4.0
+huggingface-hub==0.25.1
+idna==3.10
+imageio==2.35.1
+imageio-ffmpeg==0.5.1
+importlib-metadata==6.11.0
+ipython==8.12.3
+itsdangerous==2.2.0
+jedi==0.19.1
+Jinja2==3.1.4
+jmespath==1.0.1
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyterlab_pygments==0.3.0
+keras==3.6.0
+kiwisolver==1.4.7
+kombu==5.4.2
+langcodes==3.4.1
+language_data==1.2.0
+libclang==18.1.1
+Mako==1.3.5
+marisa-trie==1.2.0
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mistune==3.0.2
+ml-dtypes==0.4.1
+mlflow==2.17.0
+mlflow-skinny==2.17.0
+mock==4.0.3
 moviepy==1.0.3
-Requests==2.32.3
+mpmath==1.3.0
+multidict==6.1.0
+multiprocess==0.70.17
+murmurhash==1.0.10
+namex==0.0.8
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+networkx==3.3
+nltk==3.9.1
+numpy==1.26.4
+opentelemetry-api==1.27.0
+opentelemetry-sdk==1.27.0
+opentelemetry-semantic-conventions==0.48b0
+opt_einsum==3.4.0
+optree==0.13.0
+packaging==24.1
+pandas==2.2.3
+pandocfilters==1.5.1
+parameterized==0.9.0
+parso==0.8.4
+pathos==0.3.3
+pexpect==4.9.0
+pickleshare==0.7.5
+pillow==10.4.0
+pipreqs==0.5.0
+platformdirs==4.3.6
+pox==0.3.5
+ppft==1.7.6.9
+preshed==3.0.9
+proglog==0.1.10
+prompt_toolkit==3.0.48
+propcache==0.2.0
+protobuf==4.25.5
+psutil==6.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyarrow==17.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pydantic==2.9.2
+pydantic_core==2.23.4
+Pygments==2.18.0
+pyobjc==10.3.1
+pyobjc-core==10.3.1
+pyobjc-framework-Accessibility==10.3.1
+pyobjc-framework-Accounts==10.3.1
+pyobjc-framework-AddressBook==10.3.1
+pyobjc-framework-AdServices==10.3.1
+pyobjc-framework-AdSupport==10.3.1
+pyobjc-framework-AppleScriptKit==10.3.1
+pyobjc-framework-AppleScriptObjC==10.3.1
+pyobjc-framework-ApplicationServices==10.3.1
+pyobjc-framework-AppTrackingTransparency==10.3.1
+pyobjc-framework-AudioVideoBridging==10.3.1
+pyobjc-framework-AuthenticationServices==10.3.1
+pyobjc-framework-AutomaticAssessmentConfiguration==10.3.1
+pyobjc-framework-Automator==10.3.1
+pyobjc-framework-AVFoundation==10.3.1
+pyobjc-framework-AVKit==10.3.1
+pyobjc-framework-AVRouting==10.3.1
+pyobjc-framework-BackgroundAssets==10.3.1
+pyobjc-framework-BusinessChat==10.3.1
+pyobjc-framework-CalendarStore==10.3.1
+pyobjc-framework-CallKit==10.3.1
+pyobjc-framework-CFNetwork==10.3.1
+pyobjc-framework-Cinematic==10.3.1
+pyobjc-framework-ClassKit==10.3.1
+pyobjc-framework-CloudKit==10.3.1
+pyobjc-framework-Cocoa==10.3.1
+pyobjc-framework-Collaboration==10.3.1
+pyobjc-framework-ColorSync==10.3.1
+pyobjc-framework-Contacts==10.3.1
+pyobjc-framework-ContactsUI==10.3.1
+pyobjc-framework-CoreAudio==10.3.1
+pyobjc-framework-CoreAudioKit==10.3.1
+pyobjc-framework-CoreBluetooth==10.3.1
+pyobjc-framework-CoreData==10.3.1
+pyobjc-framework-CoreHaptics==10.3.1
+pyobjc-framework-CoreLocation==10.3.1
+pyobjc-framework-CoreMedia==10.3.1
+pyobjc-framework-CoreMediaIO==10.3.1
+pyobjc-framework-CoreMIDI==10.3.1
+pyobjc-framework-CoreML==10.3.1
+pyobjc-framework-CoreMotion==10.3.1
+pyobjc-framework-CoreServices==10.3.1
+pyobjc-framework-CoreSpotlight==10.3.1
+pyobjc-framework-CoreText==10.3.1
+pyobjc-framework-CoreWLAN==10.3.1
+pyobjc-framework-CryptoTokenKit==10.3.1
+pyobjc-framework-DataDetection==10.3.1
+pyobjc-framework-DeviceCheck==10.3.1
+pyobjc-framework-DictionaryServices==10.3.1
+pyobjc-framework-DiscRecording==10.3.1
+pyobjc-framework-DiscRecordingUI==10.3.1
+pyobjc-framework-DiskArbitration==10.3.1
+pyobjc-framework-DVDPlayback==10.3.1
+pyobjc-framework-EventKit==10.3.1
+pyobjc-framework-ExceptionHandling==10.3.1
+pyobjc-framework-ExecutionPolicy==10.3.1
+pyobjc-framework-ExtensionKit==10.3.1
+pyobjc-framework-ExternalAccessory==10.3.1
+pyobjc-framework-FileProvider==10.3.1
+pyobjc-framework-FileProviderUI==10.3.1
+pyobjc-framework-FinderSync==10.3.1
+pyobjc-framework-FSEvents==10.3.1
+pyobjc-framework-GameCenter==10.3.1
+pyobjc-framework-GameController==10.3.1
+pyobjc-framework-GameKit==10.3.1
+pyobjc-framework-GameplayKit==10.3.1
+pyobjc-framework-HealthKit==10.3.1
+pyobjc-framework-ImageCaptureCore==10.3.1
+pyobjc-framework-InputMethodKit==10.3.1
+pyobjc-framework-InstallerPlugins==10.3.1
+pyobjc-framework-InstantMessage==10.3.1
+pyobjc-framework-Intents==10.3.1
+pyobjc-framework-IntentsUI==10.3.1
+pyobjc-framework-IOBluetooth==10.3.1
+pyobjc-framework-IOBluetoothUI==10.3.1
+pyobjc-framework-IOSurface==10.3.1
+pyobjc-framework-iTunesLibrary==10.3.1
+pyobjc-framework-KernelManagement==10.3.1
+pyobjc-framework-LatentSemanticMapping==10.3.1
+pyobjc-framework-LaunchServices==10.3.1
+pyobjc-framework-libdispatch==10.3.1
+pyobjc-framework-libxpc==10.3.1
+pyobjc-framework-LinkPresentation==10.3.1
+pyobjc-framework-LocalAuthentication==10.3.1
+pyobjc-framework-LocalAuthenticationEmbeddedUI==10.3.1
+pyobjc-framework-MailKit==10.3.1
+pyobjc-framework-MapKit==10.3.1
+pyobjc-framework-MediaAccessibility==10.3.1
+pyobjc-framework-MediaLibrary==10.3.1
+pyobjc-framework-MediaPlayer==10.3.1
+pyobjc-framework-MediaToolbox==10.3.1
+pyobjc-framework-Metal==10.3.1
+pyobjc-framework-MetalFX==10.3.1
+pyobjc-framework-MetalKit==10.3.1
+pyobjc-framework-MetalPerformanceShaders==10.3.1
+pyobjc-framework-MetalPerformanceShadersGraph==10.3.1
+pyobjc-framework-MetricKit==10.3.1
+pyobjc-framework-MLCompute==10.3.1
+pyobjc-framework-ModelIO==10.3.1
+pyobjc-framework-MultipeerConnectivity==10.3.1
+pyobjc-framework-NaturalLanguage==10.3.1
+pyobjc-framework-NetFS==10.3.1
+pyobjc-framework-Network==10.3.1
+pyobjc-framework-NetworkExtension==10.3.1
+pyobjc-framework-NotificationCenter==10.3.1
+pyobjc-framework-OpenDirectory==10.3.1
+pyobjc-framework-OSAKit==10.3.1
+pyobjc-framework-OSLog==10.3.1
+pyobjc-framework-PassKit==10.3.1
+pyobjc-framework-PencilKit==10.3.1
+pyobjc-framework-PHASE==10.3.1
+pyobjc-framework-Photos==10.3.1
+pyobjc-framework-PhotosUI==10.3.1
+pyobjc-framework-PreferencePanes==10.3.1
+pyobjc-framework-PushKit==10.3.1
+pyobjc-framework-Quartz==10.3.1
+pyobjc-framework-QuickLookThumbnailing==10.3.1
+pyobjc-framework-ReplayKit==10.3.1
+pyobjc-framework-SafariServices==10.3.1
+pyobjc-framework-SafetyKit==10.3.1
+pyobjc-framework-SceneKit==10.3.1
+pyobjc-framework-ScreenCaptureKit==10.3.1
+pyobjc-framework-ScreenSaver==10.3.1
+pyobjc-framework-ScreenTime==10.3.1
+pyobjc-framework-ScriptingBridge==10.3.1
+pyobjc-framework-SearchKit==10.3.1
+pyobjc-framework-Security==10.3.1
+pyobjc-framework-SecurityFoundation==10.3.1
+pyobjc-framework-SecurityInterface==10.3.1
+pyobjc-framework-SensitiveContentAnalysis==10.3.1
+pyobjc-framework-ServiceManagement==10.3.1
+pyobjc-framework-SharedWithYou==10.3.1
+pyobjc-framework-SharedWithYouCore==10.3.1
+pyobjc-framework-ShazamKit==10.3.1
+pyobjc-framework-Social==10.3.1
+pyobjc-framework-SoundAnalysis==10.3.1
+pyobjc-framework-Speech==10.3.1
+pyobjc-framework-SpriteKit==10.3.1
+pyobjc-framework-StoreKit==10.3.1
+pyobjc-framework-Symbols==10.3.1
+pyobjc-framework-SyncServices==10.3.1
+pyobjc-framework-SystemConfiguration==10.3.1
+pyobjc-framework-SystemExtensions==10.3.1
+pyobjc-framework-ThreadNetwork==10.3.1
+pyobjc-framework-UniformTypeIdentifiers==10.3.1
+pyobjc-framework-UserNotifications==10.3.1
+pyobjc-framework-UserNotificationsUI==10.3.1
+pyobjc-framework-VideoSubscriberAccount==10.3.1
+pyobjc-framework-VideoToolbox==10.3.1
+pyobjc-framework-Virtualization==10.3.1
+pyobjc-framework-Vision==10.3.1
+pyobjc-framework-WebKit==10.3.1
+pyparsing==3.2.0
+python-dateutil==2.9.0.post0
+pyttsx3==2.98
+pytz==2024.2
+PyYAML==6.0.2
+pyzmq==26.2.0
+redis==5.1.1
+referencing==0.35.1
+regex==2024.9.11
+requests==2.32.3
+rich==13.9.2
+rpds-py==0.20.0
+rsa==4.9
+s3transfer==0.10.3
+safetensors==0.4.5
+sagemaker==2.232.2
+sagemaker-core==1.0.10
+sagemaker-mlflow==0.1.0
+schema==0.7.7
+scikit-learn==1.5.2
+scipy==1.14.1
+setuptools==75.1.0
+shellingham==1.5.4
+six==1.16.0
+smart-open==7.0.5
+smdebug-rulesconfig==1.0.1
+smmap==5.0.1
+sniffio==1.3.1
+soupsieve==2.6
+spacy==3.8.2
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+SQLAlchemy==2.0.35
+sqlparse==0.5.1
+srsly==2.4.8
+stack-data==0.6.3
+sympy==1.13.3
+tblib==3.0.0
+tensorboard==2.17.1
+tensorboard-data-server==0.7.2
+tensorflow==2.17.0
+termcolor==2.4.0
+tf_keras==2.17.0
+thinc==8.3.2
+threadpoolctl==3.5.0
+tinycss2==1.3.0
+tokenizers==0.20.0
+torch==2.4.1
+torchaudio==2.4.1
+torchvision==0.19.1
+tornado==6.4.1
+tqdm==4.66.5
+traitlets==5.14.3
+transformers==4.45.1
+typer==0.12.5
+types-requests==2.32.0.20240914
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+vine==5.1.0
+wasabi==1.1.3
+wcwidth==0.2.13
+weasel==0.4.1
+webencodings==0.5.1
+Werkzeug==3.0.4
+wheel==0.44.0
+wrapt==1.16.0
+yarg==0.1.9
+yarl==1.15.1
+zipp==3.20.2
+
